relative layout->linear layout newer interface

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,41 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/main_screen"
-    >
-    <Button
-            android:id="@+id/start_button"
-            android:layout_width="100pt"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:background="@drawable/main_screen"
+        >
+    <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="120pt"
-            android:text="@string/start_button_text"/>
-    <Button
-            android:id="@+id/prepare_button"
-            android:layout_width="100pt"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/start_button"
-            android:text="@string/prepare_button_text"/>
-    <TextView
-            android:id="@+id/word_counter_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/prepare_button"
-            android:layout_centerHorizontal="true"
-            android:text="@string/word_counter_text"
-            android:textSize="8pt"
-            />
-    <TextView
-            android:id="@+id/player_counter_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/word_counter_text"
-            android:layout_centerHorizontal="true"
-            android:text="@string/player_counter_text"
-            android:textSize="8pt"
-            />
-</RelativeLayout>
+            android:layout_weight="4"
+            >
+        <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/title_text"
+                android:layout_centerInParent="true"
+                android:textSize="25pt"
+                android:textColor="#FFFF00"
+                />
+    </RelativeLayout>
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+        <Button
+                android:id="@+id/start_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/start_button_text"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+        <Button
+                android:id="@+id/edit_words_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/edit_words_button_text"/>
+        <Button
+                android:id="@+id/edit_players_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/edit_players_button_text"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            >
+        <TextView
+                android:id="@+id/word_counter_text"
+                android:layout_width="0pt"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/word_counter_text"
+                android:textSize="8pt"
+                />
+        <TextView
+                android:id="@+id/player_counter_text"
+                android:layout_width="0pt"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/player_counter_text"
+                android:textSize="8pt"
+                />
+    </LinearLayout>
+
+
+</LinearLayout>
 
