--- a/res/layout/words.xml
+++ b/res/layout/words.xml
@@ -2,9 +2,72 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+              android:layout_height="fill_parent"
+              android:orientation="vertical">
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+        <Button
+                android:id="@+id/minus_words_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/words_minus_text"
+                android:textSize="12pt"/>
+        <EditText
+                android:id="@+id/words_number_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="numberDecimal"
+                android:textSize="12pt"/>
+        <Button
+                android:id="@+id/plus_words_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/words_plus_text"
+                android:textSize="12pt"/>
+    </LinearLayout>
+    <RadioGroup
+            android:id="@+id/words_level_group"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+        <RadioButton
+                android:id="@+id/hard_level_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/hard_level_text"/>
+        <RadioButton
+                android:id="@+id/medium_level_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/medium_level_text"/>
+        <RadioButton
+                android:id="@+id/easy_level_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/easy_level_text"/>
+    </RadioGroup>
     <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/add_words_button"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/wordsNumberPicker"/>
+            android:layout_weight="1"
+            android:text="@string/add_words_text"/>
+    <TextView
+            android:id="@id/word_counter_text"
+            android:layout_width="wrap_content"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            android:text="@string/word_counter_text"
+            android:textSize="8pt"
+            />
+    <Button
+            android:id="@+id/delete_words_button"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/delete_words_text"/>
+
 </LinearLayout>
