--- a/res/layout/words.xml
+++ b/res/layout/words.xml
@@ -7,7 +7,9 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true">
         <Button
                 android:id="@+id/minus_words_button"
                 android:layout_width="fill_parent"
