--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -33,7 +33,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/start_button_text"/>
+                android:text="@string/start_button_text"
+                android:onClick="newGameButtonClick"/>
     </LinearLayout>
 
     <LinearLayout
