--- a/res/layout/game.xml
+++ b/res/layout/game.xml
@@ -19,21 +19,21 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/pop_word_text"
-                android:onClick="PopWordFromHat"/>
+                android:onClick="popWordFromHat"/>
         <Button
                 android:id="@+id/guessed_word_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/guessed_word_text"
-                android:onClick="GuessedWordButtonClick"/>
+                android:onClick="guessedWordButtonClick"/>
         <Button
                 android:id="@+id/push_word_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/push_word_text"
-                android:onClick="PushWordButtonClick"/>
+                android:onClick="pushWordButtonClick"/>
         <TextView
                 android:id="@+id/timer"
                 android:layout_width="wrap_content"
