--- a/res/layout/game.xml
+++ b/res/layout/game.xml
@@ -13,13 +13,34 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             >
-        <Button
-                android:id="@+id/pop_word_button"
-                android:layout_width="fill_parent"
+        <TextView
+                android:id="@+id/timer"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/pop_word_text"
-                android:onClick="popWordFromHat"/>
+                android:text="00"
+                android:textSize="28pt"
+                android:padding="10dip" android:layout_gravity="center" android:textColor="#ffff00"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textInfo" android:layout_gravity="center" android:textSize="10pt"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" android:layout_marginTop="-4dp">
+        <TextView
+                android:id="@+id/current_word"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text=""
+                android:textSize="40dip"
+                android:padding="10dip" android:layout_marginLeft="106dp"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
         <Button
                 android:id="@+id/guessed_word_button"
                 android:layout_width="fill_parent"
@@ -28,25 +49,18 @@
                 android:text="@string/guessed_word_text"
                 android:onClick="guessedWordButtonClick"/>
         <Button
+                android:id="@+id/pop_word_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/pop_word_text"
+                android:onClick="popWordFromHat"/>
+        <Button
                 android:id="@+id/push_word_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="@string/push_word_text"
                 android:onClick="pushWordButtonClick"/>
-        <TextView
-                android:id="@+id/timer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="00"
-                android:textSize="40dip"
-                android:padding="10dip" />
-        <TextView
-                android:id="@+id/current_word"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="40dip"
-                android:padding="10dip" />
     </LinearLayout>
 </LinearLayout>
