--- a/res/layout/team_row.xml
+++ b/res/layout/team_row.xml
@@ -3,23 +3,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="#FFAAFA"
+    >
 
   <TextView android:id="@+id/first_player"
-            android:layout_width="60pt"
-            android:layout_height="fill_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="24dp"
+            android:gravity="center"
+            android:textSize="24sp"
             android:layout_margin="5pt"
             android:layout_marginRight="15pt"
+            android:layout_weight="1"
+            android:textColor="@android:color/black"
       />
-
+  <View
+      android:layout_width="1dp"
+      android:layout_height="match_parent"
+      android:background="@android:color/background_dark">
+  </View>
   <TextView android:id="@+id/second_player"
-            android:layout_width="60pt"
-            android:layout_height="fill_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:textSize="24dp"
+            android:gravity="center"
+            android:textSize="24sp"
             android:layout_margin="5pt"
+            android:layout_marginLeft="15pt"
+            android:layout_weight="1"
+            android:textColor="@android:color/black"
       />
 
 </LinearLayout>
